Login PAGE updated

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #66c5ea;
+    background: #4e5259;
 }
 
 .wrapper{
